--- a/src/main/resources/templates/saludo.html
+++ b/src/main/resources/templates/saludo.html
@@ -2,4 +2,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <h1 th:text="'Saludo: ' + ${mensaje}"> </h1>
     <p>Prueba de texto</p>
+    <p>Prueba de texto 2 </p>
 </html>
