Body creado y h1 con p incrustados

--- a/src/main/resources/templates/saludo.html
+++ b/src/main/resources/templates/saludo.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <h1 th:text="'Saludo: ' + ${mensaje}"> </h1>
-    <p>Prueba de texto</p>
-    <p>Git flow </p>
+
+    <body>
+        <h1 th:text="'Saludo: ' + ${mensaje}"> </h1>
+        <p>Prueba de texto</p>
+        <p>Git flow </p>
+    </body>
+
 </html>
+
