--- a/src/main/resources/templates/saludo.html
+++ b/src/main/resources/templates/saludo.html
@@ -2,6 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
     <body>
+        <header>
+            <h1>Cabecera</h1>
+        </header>
         <h1 th:text="'Saludo: ' + ${mensaje}"> </h1>
         <p>Prueba de texto</p>
         <p>Git flow </p>
